[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-harvest"
version = "1.0.0"
authors = [
    {name = "Tanaka Chiromo", email = "tanakachiromo@gmail.com"},
]
description = "A competitive 1v1 AI simulation game combining quantum mechanics with strategic resource management"
readme = "README.md"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["game", "ai", "quantum", "strategy", "reinforcement-learning"]
dependencies = [
    "numpy>=1.21.0",
    "pygame>=2.1.0",
    "gymnasium>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/tanaka-chiromo/quantum-harvest"
Repository = "https://github.com/tanaka-chiromo/quantum-harvest.git"
Issues = "https://github.com/tanaka-chiromo/quantum-harvest/issues"

[project.scripts]
quantum-harvest = "quantum_harvest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantum_harvest*"]

[tool.setuptools.package-data]
quantum_harvest = ["*.py", "*.json", "*.txt", "*.html", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=quantum_harvest --cov-report=html --cov-report=term-missing"
